# ewts-rs

./: .gitignore  Cargo.toml  README.md  build-bin.sh  index.html  rustfmt.toml
.github/workflows/: update-gh-pages.yml
assets/: ewts_bg-BBtl-8ew.wasm  ewts_wasm_bg-BEnX4Hc7.wasm  index-B5Zhzjvx.js  index-BOFEccJA.css  index-BtXDGYu4.css  index-DZvtPwsK.js  index-XaKMcmuo.js
bench/: .gitignore  Cargo.toml  README.md  cpp_bench.cpp  java_bench.java  js_tools_bench.js  package.json  python_tools_bench.py  run_bench.sh  sample_ewts_text.txt
bench/src/: main.rs
demo/: index.html  package.json  vite.config.js
demo/src/: main.ts  style.scss
ewts/: Cargo.toml  README.md
ewts-c/: Cargo.toml  README.md  build.rs  ewts-c.h  ewts-cpp.h  ewts-cython.h
ewts-c/examples/: example.cpp  sample.txt
ewts-c/src/: lib.rs
ewts-cli/: Cargo.toml  README.md
ewts-cli/src/: main.rs
ewts-lib/: Cargo.toml
ewts-lib/src/: converter.rs  dict.rs  lib.rs  tokenizer.rs
ewts-wasm/: Cargo.toml  README.md  build.sh  update_package_json.js
ewts-wasm/examples/: example_ewts_txt.txt  package.json  usage_in_browser_without_bundlers.html  usage_in_node.js  use_in_node.js
ewts-wasm/src/: lib.rs
ewts/src/: converter.rs  dict.rs  lib.rs  rules_test.rs  tokenizer.rs
