[workspace]

resolver = "2"
members = [
  "ewts-cli",
  "ewts", 
  "ewts-wasm", 
  "bench",
]

[workspace.package]
edition = "2021"
authors = ["Maxim Zommer <emgyrz@gmail.com>"]
repository = "https://github.com/emgyrz/ewts-rs"
keywords = ["tibetan", "ewts", "converter"]
homepage = "https://github.com/emgyrz/ewts-rs"
license = "MIT OR Apache-2.0"
