[package]
name = "ewts-cli"
version = "0.1.0"
description = "Converter from EWTS (Extended Wylie Transliteration Scheme) to Tibetan Unicode symbols (cli)"
categories = ["text-processing", "internationalization", "encoding", "localization", "command-line-utilities"]
authors.workspace = true
keywords.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
ewts = { path = "../ewts", version = "0.1.0" }
