[package]
name = "ewts"
version = "0.1.0"
description = "Converter from EWTS (Extended Wylie Transliteration Scheme) to Tibetan Unicode symbols (lib)"
categories = ["text-processing", "converter", "encoding", "localization"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

